feat: move files to assets

--- a/index.html
+++ b/index.html
@@ -5,8 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <img src="/assets/img/foto.jpg" class="foto">  
+        <h1>Liudmila Hryshchuk</h1>                   
+    </header>
+    <main class="main">
+        <section>
+            <h2>Briefly About Myself</h2>
+            <p>A year ago, I became interested in UX / UI design, finished courses. I enjoy turning complex problems into beautiful and intuitive interface designs.I develop design for websites of any type (online store, landing page, etc.), adaptive websites, mobile applications.</p>
+            <p>Developing the structure and visual design of the interface of complex web applications, there was a desire to master JS and expand my skills and knowledge for further professional growth.</p>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <div class="skills-list">
+                <div>
+                    <b>Software:</b>
+                    <ul>
+                        <li>Design and Prototyping tools,</li>
+                        <li>including Figma,</li>
+                        <li>Adobe Photoshop,</li>
+                        <li>HTML5,</li>
+                        <li>CSS3,</li>
+                        <li>JavaScript Basics,</li>
+                        <li>Git, GitHub;</li>
+                    </ul>
+                </div>
+                <div class="ots">
+                    <b>Design Skills:</b>
+                    <ul>
+                        <li>Wireframing,</li>
+                        <li>Interaction Design,</li>
+                        <li>User Interface Design,</li>
+                        <li>Web design.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Code Examples</h2>
+            <b>Task:</b>
+            <p class="task1">Build a function that takes in two arguments (salary, bonus). Salary will be an integer, and bonus a boolean. If bonus is true, the salary should be multiplied by 10. If bonus is false, the fatcat did not make enough money and must receive only his stated salary. Return the total figure the individual will receive as a string prefixed with "£"</p>
+            <b>Solution:</b>
+            <pre><code class="trec">function bonusTime(salary, bonus) {
+    return £${bonus ? salary*10 : salary
+}</code></pre>
+        </section>
+        <section>
+            <h2>Work experience</h2>
+            <b>Project description:</b>
+            <p class="task1">Development of the design of an online store of farm products with the ability for the client, depending on the rating, to choose the appropriate supplier.</p>
+            <b>Main responsibilities:</b>
+            <div class="task1">
+                <ol>
+                     <li>collecting information about the project and its audience;</li>
+                     <li>designing custom scenarios;</li>
+                     <li>style development, drawing up instructions for fonts, colors and sizes;</li>
+                     <li>creation of layouts and prototypes;</li>
+                     <li>rendering of the interface in graphic editors.</li>
+            </ol></div>
+            <b>Portfolio:</b>
+            <a href="https://www.behance.net/gallery/134770713/Organic-Grocery">Behance</a>
+        </section>
+        <section>
+            <h2>Education</h2>
+            <div class="task1">
+                <b>Educational Center for Programming and High Tech (IT-Academy)</b>
+                <p>Course: UX/UI Design</p>
+                <p>Certificate:</p>                
+                <div class="qr-code">
+                    <a href="https://docviewer.yandex.com/view/1130000014781727/?*=KiblF8oyZkBh8A4T%2B%2FvAyj6rzxB7InVybCI6InlhLW1haWw6Ly8xNzc4OTIxODUyODExMzcyOTgvMS4yIiwidGl0bGUiOiLQm9GO0LTQvNC40LvQsCDQk9GA0LjRidGD0LoucGRmIiwibm9pZnJhbWUiOmZhbHNlLCJ1aWQiOiIxMTMwMDAwMDE0NzgxNzI3IiwidHMiOjE2NjI1ODQyMTQwMzksInl1IjoiNjYxMzk0ODczMTYzMTczMDMwMiJ9"> <img src="/assets/img/qr.svg" width="100"></a>
+                    <span> View on your phone</span>
+                </div>
+            </div>         
+            <b>Brest State A. Pushkin University</b>
+            <p>Specialization: mathematics and computer science.</p>
+        </section>  
+        <section>
+            <h2>Language</h2>
+            <b>Russian: </b> native speaker
+            <p>
+               <b>English: </b> A1 (A2 in process…)
+            </p>
+        </section>
+        <section>
+            <h2>Contact Information</h2>
+            <ul class="contact-list">
+                <li><a href="tel:+37533770706"><img src="/assets/img/pngfind.com-mobile-recharge-icon-png-2129269.png" width="20px" height="20px"><span> +375 (33) 377-07-06</span></a></li>
+                <li><a href="malto:luda_grischuk@tut.by"><img src="/assets/img/mail-213 (1).svg" width="20px"> Email: luda_grischuk@tut.by</a></li>
+                <li><a href="https://github.com/mila-fox/rsschool-cv"><img src="/assets/img/Git.svg" width="20px">GitHub: mila-fox</a></li>
+                <li> <a href="/assets/img/in.svg"><img src="/assets/img/in.svg" width="20px">Linkedin: ludmila-hryshchuk</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <a href="https://github.com/mila-fox" target="My GitHub"> <img src="/assets/img/Git.svg" width="35"> </a>
+        <span class="year">2022</span> 
+        <a href="https://rs.school/" target="RS School"> <img src="/assets/img/RS.png" width="75"> </a>
+    </footer>
 </body>
 </html>
